# number_names_rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: build.yml  release.yml
src/: format.rs  languages.rs  lib.rs  tests.rs
src/languages/: en_us.rs
