[package]
name = "number-names"
version = "0.1.0"
edition = "2018"
description = "Number names is a Rust library to provide formatted string names for cardinal and ordinal numbers."
authors = [
    "Robert M Chambers <rmchambers@gmail.com>"
]
readme = "README.md"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
