[package]
name = "number-names"
version = "0.1.2"
edition = "2018"
description = "Number names is a Rust library to provide formatted string names for cardinal and ordinal numbers."
authors = [
    "Robert M Chambers <rmchambers@gmail.com>"
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/calteran/number_names_rs/"
documentation = "https://docs.rs/number-names/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
